tests/baselines/reference/objectSpreadGeneric.errors.txt
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(9,5): error TS2322: Type '{ ...U }' is not assignable to type 'U'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(10,11): error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...V; ...U; ...T }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(11,11): error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...U; ...T; ...V }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(12,11): error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...U; ...V }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(13,11): error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...T; ...V }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(14,11): error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...T; ...U }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(16,11): error TS2322: Type '{ first: string; ...T; ...U }' is not assignable to type '{ first: string; ...T; ...U }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(19,11): error TS2322: Type '{}' is not assignable to type '{ ...T; ...U }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(26,11): error TS2322: Type '{ sn?: boolean; ...T; sn?: string | number; }' is not assignable to type '{ ...T; sn?: string | number | boolean; }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(32,11): error TS2322: Type '{ first: string; ...T; second: string; ...U; third: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(34,11): error TS2322: Type '{ first: string; ...T; second: string; ...U; third: string; }' is not assignable to type '{ first: string; second: string; ...T; third: string; }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(36,11): error TS2322: Type '{ first: string; ...T; second: string; ...U; third: string; secondsecond: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; secondsecond: string; }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(38,11): error TS2322: Type '{ first: string; ...T; second: string; ...U; third: string; secondsecond: string; }' is not assignable to type '{ first: string; second: string; secondsecond: string; third: string; ...T; ...U }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(42,11): error TS2322: Type '{ firrrrrrst: string; ...T; second: string; ...U; third: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(44,11): error TS2322: Type '{ first: string; ...T; ssssssssecond: string; ...U; third: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
tests/cases/conformance/types/spread/objectSpreadGeneric.ts(46,11): error TS2322: Type '{ first: string; ...T; second: string; ...U; thirrrrrrrd: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.


==== tests/cases/conformance/types/spread/objectSpreadGeneric.ts (16 errors) ====
    function f<T, U, V>(t: T, u: U, v: V): void {
        let o: { ...T, ...U, ...V };
        let uus: { ...U, ...U};
        let us: { ...U };
        const same: { ...T, ...U, ...V } = o; // ok
        uus = us; // ok, multiple spreads are equivalent to a single one
        us = uus; // ok, multiple spreads are equivalent to a single one
        us = u;   // ok, type has at least all the properties of the spread
        u = us;   // error, might be missing a ton of stuff
        ~
!!! error TS2322: Type '{ ...U }' is not assignable to type 'U'.
        const reversed: { ...V, ...U, ...T } = o; // error, reversed
              ~~~~~~~~
!!! error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...V; ...U; ...T }'.
        const reversed2: { ...U, ...T, ...V } = o; // error, U and T are still reversed
              ~~~~~~~~~
!!! error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...U; ...T; ...V }'.
        const missingT: { ...U, ...V } = o; // error, missing T
              ~~~~~~~~
!!! error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...U; ...V }'.
        const missingU: { ...T, ...V } = o; // error, missing U
              ~~~~~~~~
!!! error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...T; ...V }'.
        const missingV: { ...T, ...U } = o; // error, missing V
              ~~~~~~~~
!!! error TS2322: Type '{ ...T; ...U; ...V }' is not assignable to type '{ ...T; ...U }'.
        const atEnd: { ...T, ...U, second: string } = { ...t, ...u, second: 'foo' }; // ok
        const atBeginning: { first: string, ...T, ...U, } = { first: 'foo', ...t, ...u }; // error, not assignable
              ~~~~~~~~~~~
!!! error TS2322: Type '{ first: string; ...T; ...U }' is not assignable to type '{ first: string; ...T; ...U }'.
    
        const emptyTarget: { } = { ...t, ...u } // ok
        const emptySource: { ...T, ...U } = { }; // error, {} is not assignable to U (or T)
              ~~~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type '{ ...T; ...U }'.
    
        // error, { sn?: boolean } ...T ... { sn?: number | string } is not assignable to
        //        T ... { sn?: number | string | boolean }
        let optionalNumber: { sn?: number };
        let optionalString: { sn?: string };
        let optionalBoolean: { sn?: boolean };
        const unionCutoff: { ...T, sn?: number | string | boolean } =
              ~~~~~~~~~~~
!!! error TS2322: Type '{ sn?: boolean; ...T; sn?: string | number; }' is not assignable to type '{ ...T; sn?: string | number | boolean; }'.
            { ...optionalBoolean, ...t, ...optionalString, ...optionalNumber }
        unionCutoff.sn; // ok
        const optionalCutoff = { ...t, ...optionalNumber }; // ok
        optionalCutoff.sn; // ok
    
        const interspersed: { first: string, ...T, second: string, ...U, third: string } =
              ~~~~~~~~~~~~
!!! error TS2322: Type '{ first: string; ...T; second: string; ...U; third: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
            { first: '1', ...t, second: '2', ...u, third: '3' }; // error, not assignable
        const interspersedMissingU: { first: string, second: string, ...T, third: string } =
              ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ first: string; ...T; second: string; ...U; third: string; }' is not assignable to type '{ first: string; second: string; ...T; third: string; }'.
            { first: '1', ...t, second: '2', ...u, third: '3' }; // error, 'U' is missing
        const interspersedOrder1: { first: string, ...T, second: string, ...U, third: string, secondsecond: string } =
              ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ first: string; ...T; second: string; ...U; third: string; secondsecond: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; secondsecond: string; }'.
            { first: '1', ...t, second: '2', ...u, third: '3', secondsecond: 'false' }; // error, not assignable
        const interspersedOrder2: { first: string, second: string, secondsecond: string, third: string, ...T, ...U } =
              ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ first: string; ...T; second: string; ...U; third: string; secondsecond: string; }' is not assignable to type '{ first: string; second: string; secondsecond: string; third: string; ...T; ...U }'.
            { first: '1', ...t, second: '2', ...u, third: '3', secondsecond: 'false' }; // error, not assignable
    
    
        const mismatchFirst: { first: string, ...T, second: string, ...U, third: string } =
              ~~~~~~~~~~~~~
!!! error TS2322: Type '{ firrrrrrst: string; ...T; second: string; ...U; third: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
            { firrrrrrst: '1', ...t, second: '2', ...u, third: '3' }; // error, not assignable
        const mismatchSecond: { first: string, ...T, second: string, ...U, third: string } =
              ~~~~~~~~~~~~~~
!!! error TS2322: Type '{ first: string; ...T; ssssssssecond: string; ...U; third: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
            { first: '1', ...t, ssssssssecond: '2', ...u, third: '3' }; // error, not assignable
        const mismatchLast: { first: string, ...T, second: string, ...U, third: string } =
              ~~~~~~~~~~~~
!!! error TS2322: Type '{ first: string; ...T; second: string; ...U; thirrrrrrrd: string; }' is not assignable to type '{ first: string; ...T; second: string; ...U; third: string; }'.
            { first: '1', ...t, second: '2', ...u, thirrrrrrrd: '3' }; // error, not assignable
    }
    